# CHIP8

./: .gitignore  CMakeLists.txt  README.md  main.c
CHIP8/: CHIP8.c  CHIP8.h
